dovecot/dovecot-pigeonhole/tests/execute/errors/conflict-reject-keep.sieve
require "reject";

reject "I am not interested in your nonsense.";
keep;
